--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,4 +1,6 @@
 @import './base.css';
+@import url('bulma/css/bulma.css');
+@import url('@fortawesome/fontawesome-free/css/all.css');
 
 #app {
   max-width: 1280px;
