--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,5 @@
 @import './base.css';
-@import url('bulma/css/bulma.css');
+@import "https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css";
 @import url('@fortawesome/fontawesome-free/css/all.css');
 
 #app {
@@ -7,12 +7,13 @@
   margin: 0 auto;
   padding: 2rem;
   font-weight: normal;
+  background-color: #f9d1dc;
 }
 
 a,
 .pink {
   text-decoration: none;
-  color: rgb(236, 178, 236);
+  color: #ff8fab;
   transition: 0.4s;
   padding: 3px;
 }
@@ -27,7 +28,7 @@ a,
 
 @media (hover: hover) {
   a:hover {
-    background-color: hsla(311, 54%, 85%, 0.2);
+    background-color: hsla(310, 63%, 72%, 0.2);
   }
 }
 
