--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,12 +2,16 @@
 @import "https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css";
 @import url('@fortawesome/fontawesome-free/css/all.css');
 
+body{
+background-color: #f9d1dc;
+}
+
 #app {
   max-width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   font-weight: normal;
-  background-color: #f9d1dc;
+ 
 }
 
 a,
