update picture for app

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -17,7 +17,7 @@ background-color: #f6dae1;
 a,
 .pink {
   text-decoration: none;
-  color: #f797af;
+  color: #f87a99;
   transition: 0.4s;
   padding: 3px;
 }
